@@ -16,8 +16,7 @@ import com.comet.opik.api.ExperimentStreamRequest;
 import com.comet.opik.api.ExperimentType;
 import com.comet.opik.api.FeedbackScore;
 import com.comet.opik.api.FeedbackScoreAverage;
-import com.comet.opik.api.FeedbackScoreBatch;
-import com.comet.opik.api.FeedbackScoreBatchItem;
+import com.comet.opik.api.FeedbackScoreItem;
 import com.comet.opik.api.FeedbackScoreNames;
 import com.comet.opik.api.PercentageValues;
 import com.comet.opik.api.Project;
@@ -29,6 +28,7 @@ import com.comet.opik.api.Trace;
 import com.comet.opik.api.VisibilityMode;
 import com.comet.opik.api.events.ExperimentCreated;
 import com.comet.opik.api.events.ExperimentsDeleted;
+import com.comet.opik.api.events.TracesDeleted;
 import com.comet.opik.api.filter.ExperimentField;
 import com.comet.opik.api.filter.ExperimentFilter;
 import com.comet.opik.api.filter.Operator;
@@ -50,6 +50,7 @@ import com.comet.opik.api.resources.utils.resources.ProjectResourceClient;
 import com.comet.opik.api.resources.utils.resources.PromptResourceClient;
 import com.comet.opik.api.resources.utils.resources.SpanResourceClient;
 import com.comet.opik.api.resources.utils.resources.TraceResourceClient;
+import com.comet.opik.api.resources.v1.events.TraceDeletedListener;
 import com.comet.opik.api.sorting.Direction;
 import com.comet.opik.api.sorting.SortableFields;
 import com.comet.opik.api.sorting.SortingField;
@@ -102,6 +103,7 @@ import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.containers.MySQLContainer;
 import org.testcontainers.lifecycle.Startables;
 import org.testcontainers.shaded.org.apache.commons.lang3.tuple.Pair;
+import org.testcontainers.shaded.org.awaitility.Awaitility;
 import ru.vyarus.dropwizard.guice.test.ClientSupport;
 import ru.vyarus.dropwizard.guice.test.jupiter.ext.TestDropwizardAppExtension;
 import uk.co.jemos.podam.api.PodamFactory;
@@ -120,16 +122,19 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Random;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.CopyOnWriteArrayList;
+import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 import static com.comet.opik.api.Experiment.ExperimentPage;
 import static com.comet.opik.api.Experiment.PromptVersionLink;
+import static com.comet.opik.api.FeedbackScoreBatchContainer.FeedbackScoreBatch;
+import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItem;
 import static com.comet.opik.api.resources.utils.ClickHouseContainerUtils.DATABASE_NAME;
 import static com.comet.opik.api.resources.utils.FeedbackScoreAssertionUtils.assertFeedbackScoreNames;
 import static com.comet.opik.api.resources.utils.QuotaLimitTestUtils.ERR_USAGE_LIMIT_EXCEEDED;
@@ -149,6 +154,7 @@ import static com.github.tomakehurst.wiremock.client.WireMock.matchingJsonPath;
 import static com.github.tomakehurst.wiremock.client.WireMock.okJson;
 import static com.github.tomakehurst.wiremock.client.WireMock.post;
 import static com.github.tomakehurst.wiremock.client.WireMock.urlPathEqualTo;
+import static java.util.stream.Collectors.averagingLong;
 import static java.util.stream.Collectors.groupingBy;
 import static java.util.stream.Collectors.mapping;
 import static java.util.stream.Collectors.toList;
@@ -227,12 +233,14 @@ class ExperimentsResourceTest {
     private TraceResourceClient traceResourceClient;
     private DatasetResourceClient datasetResourceClient;
     private SpanResourceClient spanResourceClient;
+    private TraceDeletedListener traceDeletedListener;
 
     @BeforeAll
-    void beforeAll(ClientSupport client) {
+    void beforeAll(ClientSupport client, TraceDeletedListener traceDeletedListener) {
 
         this.baseURI = TestUtils.getBaseUrl(client);
         this.client = client;
+        this.traceDeletedListener = traceDeletedListener;
 
         ClientSupportUtils.config(client);
         defaultEventBus = contextConfig.mockEventBus();
@@ -932,7 +940,7 @@ class ExperimentsResourceTest {
             var unexpectedExperiments = List.of(generateExperiment());
 
             unexpectedExperiments
-                    .forEach(expectedExperiment -> createAndAssert(expectedExperiment, apiKey, workspaceName));
+                    .forEach(unexpectedExperiment -> createAndAssert(unexpectedExperiment, apiKey, workspaceName));
 
             var pageSize = experiments.size() - 2;
             var datasetId = getAndAssert(experiments.getFirst().id(), experiments.getFirst(), workspaceName, apiKey)
@@ -1012,6 +1020,68 @@ class ExperimentsResourceTest {
                             Operator.LESS_THAN,
                             "model[0].year",
                             "2031"));
+        }
+
+        @ParameterizedTest
+        @MethodSource("getValidFilters")
+        void findByFiltering(Function<Experiment, ExperimentFilter> getFilter) {
+            var workspaceName = UUID.randomUUID().toString();
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var datasetName = RandomStringUtils.secure().nextAlphanumeric(10);
+
+            var prompt = podamFactory.manufacturePojo(Prompt.class);
+            PromptVersion promptVersion = promptResourceClient.createPromptVersion(prompt, apiKey, workspaceName);
+            PromptVersionLink versionLink = buildVersionLink(promptVersion);
+
+            var experiments = experimentResourceClient.generateExperimentList()
+                    .stream()
+                    .map(experiment -> experiment.toBuilder()
+                            .datasetName(datasetName)
+                            .promptVersion(versionLink)
+                            .promptVersions(List.of(versionLink))
+                            .build())
+                    .toList();
+            experiments.forEach(expectedExperiment -> createAndAssert(expectedExperiment,
+                    apiKey, workspaceName));
+
+            var unexpectedExperiments = List.of(generateExperiment());
+
+            unexpectedExperiments
+                    .forEach(unexpectedExperiment -> createAndAssert(unexpectedExperiment, apiKey, workspaceName));
+
+            var pageSize = experiments.size() - 2;
+            var experiment = getAndAssert(experiments.getFirst().id(), experiments.getFirst(), workspaceName, apiKey);
+            var expectedExperiments1 = experiments.subList(pageSize - 1, experiments.size()).reversed();
+            var expectedExperiments2 = experiments.subList(0, pageSize - 1).reversed();
+            var expectedTotal = experiments.size();
+
+            var filters = List.of(getFilter.apply(experiment));
+
+            findAndAssert(workspaceName, 1, pageSize, null, null, expectedExperiments1, expectedTotal,
+                    unexpectedExperiments, apiKey, false, Map.of(), null, null, null, null, filters);
+            findAndAssert(workspaceName, 2, pageSize, null, null, expectedExperiments2, expectedTotal,
+                    unexpectedExperiments, apiKey, false, Map.of(), null, null, null, null, filters);
+        }
+
+        private Stream<Arguments> getValidFilters() {
+            Integer random = new Random().nextInt(5);
+            return Stream.of(
+                    Arguments.of(
+                            (Function<Experiment, ExperimentFilter>) experiment -> ExperimentFilter.builder()
+                                    .field(ExperimentField.DATASET_ID)
+                                    .operator(Operator.EQUAL)
+                                    .value(experiment.datasetId().toString())
+                                    .build()),
+                    Arguments.of(
+                            (Function<Experiment, ExperimentFilter>) experiment -> ExperimentFilter.builder()
+                                    .field(ExperimentField.PROMPT_IDS)
+                                    .operator(Operator.CONTAINS)
+                                    .value(experiment.promptVersion().promptId().toString())
+                                    .build()));
         }
 
         @ParameterizedTest
@@ -1145,7 +1215,7 @@ class ExperimentsResourceTest {
                     .of(scoreForTrace1.stream(), scoreForTrace2.stream(), scoreForTrace3.stream(),
                             scoreForTrace4.stream(), scoreForTrace5.stream())
                     .flatMap(Function.identity())
-                    .collect(groupingBy(FeedbackScoreBatchItem::id));
+                    .collect(groupingBy(FeedbackScoreItem::id));
 
             // When storing the scores in batch, adding some more unrelated random ones
             var feedbackScoreBatch = podamFactory.manufacturePojo(FeedbackScoreBatch.class);
@@ -1284,7 +1354,7 @@ class ExperimentsResourceTest {
                     .of(scoreForTrace1.stream(), scoreForTrace2.stream(), scoreForTrace3.stream(),
                             scoreForTrace4.stream(), scoreForTrace5.stream(), scoreForTrace6.stream())
                     .flatMap(Function.identity())
-                    .collect(groupingBy(FeedbackScoreBatchItem::id));
+                    .collect(groupingBy(FeedbackScoreItem::id));
 
             // When storing the scores in batch, adding some more unrelated random ones
             var feedbackScoreBatch = podamFactory.manufacturePojo(FeedbackScoreBatch.class);
@@ -1316,6 +1386,18 @@ class ExperimentsResourceTest {
 
             deleteTrace(trace6.id(), apiKey, workspaceName);
 
+            // Since we mock the EventBus, we need to manually trigger the deletion of the trace items
+            ArgumentCaptor<TracesDeleted> experimentCaptor = ArgumentCaptor.forClass(TracesDeleted.class);
+            Mockito.verify(defaultEventBus).post(experimentCaptor.capture());
+            assertThat(experimentCaptor.getValue().traceIds()).isEqualTo(Set.of(trace6.id()));
+            assertThat(experimentCaptor.getValue().workspaceId()).isEqualTo(workspaceId);
+
+            traceDeletedListener.onTracesDeleted(TracesDeleted.builder()
+                    .traceIds(Set.of(trace6.id()))
+                    .workspaceId(workspaceId)
+                    .userName(USER)
+                    .build());
+
             List<ExperimentItem> experimentExpected = experimentItems
                     .stream()
                     .filter(item -> !item.traceId().equals(trace6.id()))
@@ -1327,34 +1409,36 @@ class ExperimentsResourceTest {
             var page = 1;
             var pageSize = 1;
 
-            try (var actualResponse = client.target(getExperimentsPath())
-                    .queryParam("page", page)
-                    .queryParam("size", pageSize)
-                    .request()
-                    .header(HttpHeaders.AUTHORIZATION, apiKey)
-                    .header(WORKSPACE_HEADER, workspaceName)
-                    .get()) {
+            Awaitility.await().pollInterval(500, TimeUnit.MILLISECONDS).untilAsserted(() -> {
+                try (var actualResponse = client.target(getExperimentsPath())
+                        .queryParam("page", page)
+                        .queryParam("size", pageSize)
+                        .request()
+                        .header(HttpHeaders.AUTHORIZATION, apiKey)
+                        .header(WORKSPACE_HEADER, workspaceName)
+                        .get()) {
 
-                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
-                var actualPage = actualResponse.readEntity(ExperimentPage.class);
-                var actualExperiments = actualPage.content();
+                    assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_OK);
+                    var actualPage = actualResponse.readEntity(ExperimentPage.class);
+                    var actualExperiments = actualPage.content();
 
-                assertThat(actualPage.page()).isEqualTo(page);
-                assertThat(actualPage.size()).isEqualTo(pageSize);
-                assertThat(actualPage.total()).isEqualTo(pageSize);
-                assertThat(actualExperiments).hasSize(pageSize);
+                    assertThat(actualPage.page()).isEqualTo(page);
+                    assertThat(actualPage.size()).isEqualTo(pageSize);
+                    assertThat(actualPage.total()).isEqualTo(pageSize);
+                    assertThat(actualExperiments).hasSize(pageSize);
 
-                for (Experiment experiment : actualExperiments) {
-                    var expectedScores = expectedScoresPerExperiment.get(experiment.id());
-                    var actualScores = getScoresMap(experiment);
+                    for (Experiment experiment : actualExperiments) {
+                        var expectedScores = expectedScoresPerExperiment.get(experiment.id());
+                        var actualScores = getScoresMap(experiment);
 
-                    assertThat(actualScores)
-                            .usingRecursiveComparison(RecursiveComparisonConfiguration.builder()
-                                    .withComparatorForType(StatsUtils::bigDecimalComparator, BigDecimal.class)
-                                    .build())
-                            .isEqualTo(expectedScores);
+                        assertThat(actualScores)
+                                .usingRecursiveComparison(RecursiveComparisonConfiguration.builder()
+                                        .withComparatorForType(StatsUtils::bigDecimalComparator, BigDecimal.class)
+                                        .build())
+                                .isEqualTo(expectedScores);
+                    }
                 }
-            }
+            });
         }
 
         @Test
@@ -1540,7 +1624,7 @@ class ExperimentsResourceTest {
                     .map(Span::usage)
                     .map(Map::entrySet)
                     .flatMap(Collection::stream)
-                    .collect(groupingBy(Map.Entry::getKey, Collectors.averagingLong(Map.Entry::getValue)));
+                    .collect(groupingBy(Map.Entry::getKey, averagingLong(Map.Entry::getValue)));
         }
 
         private BigDecimal getTotalEstimatedCostAvg(List<Span> spans) {
@@ -1608,7 +1692,7 @@ class ExperimentsResourceTest {
             var traceIdToScoresMap = Stream
                     .of(scoreForTrace1.stream())
                     .flatMap(Function.identity())
-                    .collect(groupingBy(FeedbackScoreBatchItem::id));
+                    .collect(groupingBy(FeedbackScoreItem::id));
 
             // When storing the scores in batch, adding some more unrelated random ones
             var feedbackScoreBatch = podamFactory.manufacturePojo(FeedbackScoreBatch.class);
@@ -1798,6 +1882,17 @@ class ExperimentsResourceTest {
                                     .thenComparing(Comparator.comparing(Experiment::id).reversed())
                                     .thenComparing(Comparator.comparing(Experiment::lastUpdatedAt).reversed()),
                             SortingField.builder().field(SortableFields.TRACE_COUNT).direction(Direction.DESC)
+                                    .build()),
+                    arguments(
+                            Comparator.comparing((Experiment e) -> e.duration().p50())
+                                    .thenComparing(Comparator.comparing(Experiment::id).reversed())
+                                    .thenComparing(Comparator.comparing(Experiment::lastUpdatedAt).reversed()),
+                            SortingField.builder().field("duration.p50").direction(Direction.ASC).build()),
+                    arguments(
+                            Comparator.comparing((Experiment e) -> e.duration().p50()).reversed()
+                                    .thenComparing(Comparator.comparing(Experiment::id).reversed())
+                                    .thenComparing(Comparator.comparing(Experiment::lastUpdatedAt).reversed()),
+                            SortingField.builder().field("duration.p50").direction(Direction.DESC)
                                     .build()));
         }
 
@@ -1811,7 +1906,8 @@ class ExperimentsResourceTest {
             var apiKey = UUID.randomUUID().toString();
             mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
-            var scoreForTrace = PodamFactoryUtils.manufacturePojoList(podamFactory, FeedbackScoreBatchItem.class);
+            var scoreForTrace = PodamFactoryUtils.manufacturePojoList(podamFactory,
+                    FeedbackScoreBatchItem.class);
             var experiments = IntStream.range(0, 5)
                     .mapToObj(i -> experimentResourceClient.createPartialExperiment()
                             .lastUpdatedBy(USER)
@@ -1844,7 +1940,8 @@ class ExperimentsResourceTest {
             var apiKey = UUID.randomUUID().toString();
             mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
-            var scoreForTrace = PodamFactoryUtils.manufacturePojoList(podamFactory, FeedbackScoreBatchItem.class);
+            var scoreForTrace = PodamFactoryUtils.manufacturePojoList(podamFactory,
+                    FeedbackScoreBatchItem.class);
             var experiments = IntStream.range(0, 5)
                     .mapToObj(i -> experimentResourceClient.createPartialExperiment()
                             .lastUpdatedBy(USER)
@@ -1926,7 +2023,10 @@ class ExperimentsResourceTest {
         int tracesNumber = PodamUtils.getIntegerInRange(1, 10);
 
         List<Trace> traces = IntStream.range(0, tracesNumber)
-                .mapToObj(i -> podamFactory.manufacturePojo(Trace.class))
+                .mapToObj(i -> podamFactory.manufacturePojo(Trace.class).toBuilder()
+                        .startTime(Instant.now())
+                        .endTime(Instant.now().plus(PodamUtils.getIntegerInRange(100, 2000), ChronoUnit.MILLIS))
+                        .build())
                 .toList();
 
         traceResourceClient.batchCreateTraces(traces, apiKey, workspaceName);
@@ -2356,6 +2456,7 @@ class ExperimentsResourceTest {
                         List<UUID> traceIds = experimentResourceClient
                                 .getExperimentItems(experiment.name(), API_KEY, TEST_WORKSPACE)
                                 .stream()
+                                .filter(item -> item.experimentId().equals(experiment.id()))
                                 .map(ExperimentItem::traceId)
                                 .distinct()
                                 .toList();
@@ -2465,7 +2566,7 @@ class ExperimentsResourceTest {
 
             var traceIdToScoresMap = Stream
                     .concat(Stream.concat(scoreForTrace1.stream(), scoreForTrace2.stream()), scoreForTrace3.stream())
-                    .collect(groupingBy(FeedbackScoreBatchItem::id));
+                    .collect(groupingBy(FeedbackScoreItem::id));
 
             // When storing the scores in batch, adding some more unrelated random ones
             var feedbackScoreBatch = podamFactory.manufacturePojo(FeedbackScoreBatch.class);
@@ -2540,7 +2641,7 @@ class ExperimentsResourceTest {
 
             var traceIdToScoresMap = Stream
                     .concat(Stream.concat(scoreForTrace1.stream(), scoreForTrace2.stream()), scoreForTrace3.stream())
-                    .collect(groupingBy(FeedbackScoreBatchItem::id));
+                    .collect(groupingBy(FeedbackScoreItem::id));
 
             // When storing the scores in batch, adding some more unrelated random ones
             var feedbackScoreBatch = podamFactory.manufacturePojo(FeedbackScoreBatch.class);
@@ -2781,7 +2882,7 @@ class ExperimentsResourceTest {
                     .of(scoreForTrace1.stream(), scoreForTrace2.stream(), scoreForTrace3.stream(),
                             scoreForTrace4.stream(), scoreForTrace5.stream(), scoreForTrace6.stream())
                     .flatMap(Function.identity())
-                    .collect(groupingBy(FeedbackScoreBatchItem::id));
+                    .collect(groupingBy(FeedbackScoreItem::id));
 
             // When storing the scores in batch, adding some more unrelated random ones
             var feedbackScoreBatch = podamFactory.manufacturePojo(FeedbackScoreBatch.class);
@@ -2813,6 +2914,18 @@ class ExperimentsResourceTest {
 
             deleteTrace(trace6.id(), apiKey, workspaceName);
 
+            // Since we mock the EventBus, we need to manually trigger the deletion of the trace items
+            ArgumentCaptor<TracesDeleted> experimentCaptor = ArgumentCaptor.forClass(TracesDeleted.class);
+            Mockito.verify(defaultEventBus).post(experimentCaptor.capture());
+            assertThat(experimentCaptor.getValue().traceIds()).isEqualTo(Set.of(trace6.id()));
+            assertThat(experimentCaptor.getValue().workspaceId()).isEqualTo(workspaceId);
+
+            traceDeletedListener.onTracesDeleted(TracesDeleted.builder()
+                    .traceIds(Set.of(trace6.id()))
+                    .workspaceId(workspaceId)
+                    .userName(USER)
+                    .build());
+
             List<BigDecimal> quantities = getQuantities(Stream.of(trace1, trace2, trace3, trace4, trace5));
 
             var expectedExperiment = experiment.toBuilder()
@@ -2825,17 +2938,19 @@ class ExperimentsResourceTest {
                             .filter(e -> !e.getKey().equals(trace6.id()))
                             .collect(toMap(Map.Entry::getKey, Map.Entry::getValue)));
 
-            Experiment actualExperiment = getAndAssert(experiment.id(), expectedExperiment, workspaceName, apiKey);
+            Awaitility.await().pollInterval(500, TimeUnit.MILLISECONDS).untilAsserted(() -> {
+                Experiment actualExperiment = getAndAssert(experiment.id(), expectedExperiment, workspaceName, apiKey);
 
-            assertThat(actualExperiment.traceCount()).isEqualTo(traces.size()); // decide if we should count deleted traces
+                assertThat(actualExperiment.traceCount()).isEqualTo(traces.size()); // decide if we should count deleted traces
 
-            Map<String, BigDecimal> actual = getScoresMap(actualExperiment);
+                Map<String, BigDecimal> actual = getScoresMap(actualExperiment);
 
-            assertThat(actual)
-                    .usingRecursiveComparison(RecursiveComparisonConfiguration.builder()
-                            .withComparatorForType(StatsUtils::bigDecimalComparator, BigDecimal.class)
-                            .build())
-                    .isEqualTo(expectedScores);
+                assertThat(actual)
+                        .usingRecursiveComparison(RecursiveComparisonConfiguration.builder()
+                                .withComparatorForType(StatsUtils::bigDecimalComparator, BigDecimal.class)
+                                .build())
+                        .isEqualTo(expectedScores);
+            });
         }
 
         @Test
@@ -2893,14 +3008,15 @@ class ExperimentsResourceTest {
         return null;
     }
 
-    private Map<String, BigDecimal> getExpectedScores(Map<UUID, List<FeedbackScoreBatchItem>> traceIdToScoresMap) {
+    private Map<String, BigDecimal> getExpectedScores(
+            Map<UUID, List<FeedbackScoreBatchItem>> traceIdToScoresMap) {
         return traceIdToScoresMap
                 .values()
                 .stream()
                 .flatMap(Collection::stream)
                 .collect(groupingBy(
-                        FeedbackScoreBatchItem::name,
-                        mapping(FeedbackScoreBatchItem::value, toList())))
+                        FeedbackScoreItem::name,
+                        mapping(FeedbackScoreItem::value, toList())))
                 .entrySet()
                 .stream()
                 .map(e -> Map.entry(e.getKey(), avgFromList(e.getValue())))
@@ -2922,14 +3038,17 @@ class ExperimentsResourceTest {
                         .experimentId(expectedExperiment.id())
                         .traceId(traces.get(i / totalNumberOfScoresPerTrace).id())
                         .feedbackScores(
-                                traceIdToScoresMap.get(traces.get(i / totalNumberOfScoresPerTrace).id()).stream()
+                                traceIdToScoresMap.get(traces.get(i / totalNumberOfScoresPerTrace).id())
+                                        .stream()
+
                                         .map(FeedbackScoreMapper.INSTANCE::toFeedbackScore)
                                         .toList())
                         .build())
                 .toList();
     }
 
-    private List<FeedbackScoreBatchItem> copyScoresFrom(List<FeedbackScoreBatchItem> scoreForTrace, Trace trace) {
+    private List<FeedbackScoreBatchItem> copyScoresFrom(List<FeedbackScoreBatchItem> scoreForTrace,
+            Trace trace) {
         return scoreForTrace
                 .stream()
                 .map(feedbackScoreBatchItem -> feedbackScoreBatchItem.toBuilder()
@@ -2937,7 +3056,7 @@ class ExperimentsResourceTest {
                         .projectName(trace.projectName())
                         .value(podamFactory.manufacturePojo(BigDecimal.class).abs())
                         .build())
-                .toList();
+                .collect(toList());
     }
 
     private List<FeedbackScoreBatchItem> makeTraceScores(Trace trace) {
@@ -3228,7 +3347,7 @@ class ExperimentsResourceTest {
 
             var traceIdToScoresMap = Stream
                     .concat(traceWithScores1.getRight().stream(), traceWithScores2.getRight().stream())
-                    .collect(groupingBy(FeedbackScoreBatchItem::id));
+                    .collect(groupingBy(FeedbackScoreItem::id));
 
             // When storing the scores in batch, adding some more unrelated random ones
             var feedbackScoreBatch = podamFactory.manufacturePojo(FeedbackScoreBatch.class);
@@ -3483,7 +3602,7 @@ class ExperimentsResourceTest {
                     spans.stream()
                             .map(it -> it.usage().entrySet()
                                     .stream()
-                                    .collect(Collectors.toMap(
+                                    .collect(toMap(
                                             Map.Entry::getKey,
                                             entry -> entry.getValue().longValue())))
                             .toList());
@@ -3512,19 +3631,21 @@ class ExperimentsResourceTest {
             return span;
         }
 
-        private Pair<Trace, List<FeedbackScoreBatchItem>> createTraceWithScores(String apiKey, String workspaceName) {
+        private Pair<Trace, List<FeedbackScoreBatchItem>> createTraceWithScores(String apiKey,
+                String workspaceName) {
             var trace = podamFactory.manufacturePojo(Trace.class);
             traceResourceClient.createTrace(trace, apiKey, workspaceName);
 
             // Creating 5 scores peach each of the two traces above
-            return Pair.of(trace, PodamFactoryUtils.manufacturePojoList(podamFactory, FeedbackScoreBatchItem.class)
-                    .stream()
-                    .map(feedbackScoreBatchItem -> feedbackScoreBatchItem.toBuilder()
-                            .id(trace.id())
-                            .projectName(trace.projectName())
-                            .value(podamFactory.manufacturePojo(BigDecimal.class))
-                            .build())
-                    .toList());
+            return Pair.of(trace,
+                    PodamFactoryUtils.manufacturePojoList(podamFactory, FeedbackScoreBatchItem.class)
+                            .stream()
+                            .map(feedbackScoreBatchItem -> feedbackScoreBatchItem.toBuilder()
+                                    .id(trace.id())
+                                    .projectName(trace.projectName())
+                                    .value(podamFactory.manufacturePojo(BigDecimal.class))
+                                    .build())
+                            .collect(toList()));
         }
     }
 
@@ -3758,7 +3879,8 @@ class ExperimentsResourceTest {
             // Create unexpected feedback scores
             var unexpectedProject = podamFactory.manufacturePojo(Project.class);
 
-            List<List<FeedbackScoreBatchItem>> unexpectedScores = traceResourceClient.createMultiValueScores(otherNames,
+            List<List<FeedbackScoreBatchItem>> unexpectedScores = traceResourceClient.createMultiValueScores(
+                    otherNames,
                     unexpectedProject,
                     apiKey, workspaceName);
 
@@ -3806,7 +3928,7 @@ class ExperimentsResourceTest {
         Stream.of(multipleValuesFeedbackScoreList, singleValueScores)
                 .flatMap(List::stream)
                 .flatMap(List::stream)
-                .map(FeedbackScoreBatchItem::id)
+                .map(FeedbackScoreItem::id)
                 .distinct()
                 .forEach(traceId -> {
                     var experimentItem = podamFactory.manufacturePojo(ExperimentItem.class).toBuilder()
